gl51-master/src/test/deca/context/invalid/test_rule3_17.deca
// Description
//Variable de type void

{
    void a;
}